src/qmlmodels/qqmldelegatemodel.cpp
@@ -2060,26 +2060,28 @@ QQmlDelegateModelAttached *QQmlDelegateModel::qmlAttachedProperties(QObject *obj
     return new QQmlDelegateModelAttached(obj);
 }
 
-bool QQmlDelegateModelPrivate::insert(Compositor::insert_iterator &before, const QV4::Value &object, int groups)
+QQmlDelegateModelPrivate::InsertionResult
+QQmlDelegateModelPrivate::insert(Compositor::insert_iterator &before, const QV4::Value &object, int groups)
 {
     if (!m_context || !m_context->isValid())
-        return false;
+        return InsertionResult::Error;
 
     QQmlDelegateModelItem *cacheItem = m_adaptorModel.createItem(m_cacheMetaType, -1);
     if (!cacheItem)
-        return false;
+        return InsertionResult::Error;
     if (!object.isObject())
-        return false;
+        return InsertionResult::Error;
 
     QV4::ExecutionEngine *v4 = object.as<QV4::Object>()->engine();
     QV4::Scope scope(v4);
     QV4::ScopedObject o(scope, object);
     if (!o)
-        return false;
+        return InsertionResult::Error;
 
     QV4::ObjectIterator it(scope, o, QV4::ObjectIterator::EnumerableOnly);
     QV4::ScopedValue propertyName(scope);
     QV4::ScopedValue v(scope);
+    const auto oldCache = m_cache;
     while (1) {
         propertyName = it.nextPropertyNameAsString(v);
         if (propertyName->isNull())
@@ -2088,6 +2090,9 @@ bool QQmlDelegateModelPrivate::insert(Compositor::insert_iterator &before, const
                     propertyName->toQStringNoThrow(),
                     QV4::ExecutionEngine::toVariant(v, QMetaType {}));
     }
+    const bool cacheModified = !m_cache.isSharedWith(oldCache);
+    if (cacheModified)
+        return InsertionResult::Retry;
 
     cacheItem->groups = groups | Compositor::UnresolvedFlag | Compositor::CacheFlag;
 
@@ -2097,7 +2102,7 @@ bool QQmlDelegateModelPrivate::insert(Compositor::insert_iterator &before, const
     m_cache.insert(before.cacheIndex(), cacheItem);
     m_compositor.insert(before, nullptr, 0, 1, cacheItem->groups);
 
-    return true;
+    return InsertionResult::Success;
 }
 
 //============================================================================
@@ -3098,9 +3103,8 @@ void QQmlDelegateModelGroup::insert(QQmlV4Function *args)
         v = (*args)[i];
     }
 
-    Compositor::insert_iterator before = index < model->m_compositor.count(group)
-            ? model->m_compositor.findInsertPosition(group, index)
-            : model->m_compositor.end();
+    if (v->as<QV4::ArrayObject>())
+        return;
 
     int groups = 1 << d->group;
     if (++i < args->length()) {
@@ -3108,11 +3112,16 @@ void QQmlDelegateModelGroup::insert(QQmlV4Function *args)
         groups |= model->m_cacheMetaType->parseGroups(val);
     }
 
-    if (v->as<QV4::ArrayObject>()) {
-        return;
-    } else if (v->as<QV4::Object>()) {
-        model->insert(before, v, groups);
-        model->emitChanges();
+    if (v->as<QV4::Object>()) {
+        auto insertionResult = QQmlDelegateModelPrivate::InsertionResult::Retry;
+        do {
+            Compositor::insert_iterator before = index < model->m_compositor.count(group)
+                    ? model->m_compositor.findInsertPosition(group, index)
+                    : model->m_compositor.end();
+            insertionResult = model->insert(before, v, groups);
+        } while (insertionResult == QQmlDelegateModelPrivate::InsertionResult::Retry);
+        if (insertionResult == QQmlDelegateModelPrivate::InsertionResult::Success)
+            model->emitChanges();
     }
 }
 
@@ -3162,16 +3171,19 @@ void QQmlDelegateModelGroup::create(QQmlV4Function *args)
                 groups |= model->m_cacheMetaType->parseGroups(val);
             }
 
-            Compositor::insert_iterator before = index < model->m_compositor.count(group)
-                    ? model->m_compositor.findInsertPosition(group, index)
-                    : model->m_compositor.end();
+            auto insertionResult = QQmlDelegateModelPrivate::InsertionResult::Retry;
+            do {
+                Compositor::insert_iterator before = index < model->m_compositor.count(group)
+                        ? model->m_compositor.findInsertPosition(group, index)
+                        : model->m_compositor.end();
 
-            index = before.index[d->group];
-            group = d->group;
+                index = before.index[d->group];
+                group = d->group;
 
-            if (!model->insert(before, v, groups)) {
+                insertionResult = model->insert(before, v, groups);
+            } while (insertionResult == QQmlDelegateModelPrivate::InsertionResult::Retry);
+            if (insertionResult == QQmlDelegateModelPrivate::InsertionResult::Error)
                 return;
-            }
         }
     }
     if (index < 0 || index >= model->m_compositor.count(group)) {
